// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultSection renders with shouldAlertFailureCount = <false> 1`] = `
<div
  className="result-section-class-name resultSection"
  data-automation-id="result-section"
>
  <HeadingElementForLevel
    headingLevel={2}
  >
    <ResultSectionTitle
      containerClassName="result-section-class-name"
      deps={
        Object {
          "getNextHeadingLevel": [Function],
        }
      }
      shouldAlertFailuresCount={false}
      sectionHeadingLevel={2}
      titleSize="title"
    />
  </HeadingElementForLevel>
  <ResultSectionContent
    containerClassName="result-section-class-name"
    deps={
      Object {
        "getNextHeadingLevel": [Function],
      }
    }
    headingLevel={3}
    shouldAlertFailuresCount={false}
    sectionHeadingLevel={2}
  />
</div>
`;

exports[`ResultSection renders with shouldAlertFailureCount = <true> 1`] = `
<div
  className="result-section-class-name resultSection"
  data-automation-id="result-section"
>
  <HeadingElementForLevel
    headingLevel={2}
  >
    <ResultSectionTitle
      containerClassName="result-section-class-name"
      deps={
        Object {
          "getNextHeadingLevel": [Function],
        }
      }
      shouldAlertFailuresCount={true}
      sectionHeadingLevel={2}
      titleSize="title"
    />
  </HeadingElementForLevel>
  <ResultSectionContent
    containerClassName="result-section-class-name"
    deps={
      Object {
        "getNextHeadingLevel": [Function],
      }
    }
    headingLevel={3}
    shouldAlertFailuresCount={true}
    sectionHeadingLevel={2}
  />
</div>
`;

exports[`ResultSection renders with shouldAlertFailureCount = <undefined> 1`] = `
<div
  className="result-section-class-name resultSection"
  data-automation-id="result-section"
>
  <HeadingElementForLevel
    headingLevel={2}
  >
    <ResultSectionTitle
      containerClassName="result-section-class-name"
      deps={
        Object {
          "getNextHeadingLevel": [Function],
        }
      }
      sectionHeadingLevel={2}
      titleSize="title"
    />
  </HeadingElementForLevel>
  <ResultSectionContent
    containerClassName="result-section-class-name"
    deps={
      Object {
        "getNextHeadingLevel": [Function],
      }
    }
    headingLevel={3}
    sectionHeadingLevel={2}
  />
</div>
`;
